# cuisine

./: .gitignore  CLAUDE.md  Cargo.toml  audit.toml
.claude/: memory.md  settings.local.json
.devcontainer/: devcontainer.json
migrations/: 0001_create_terms.sql  0002_create_recipes.sql  0003_create_recipe_steps.sql  0004_create_recipe_ingredients.sql  0005_seed_terms.sql  0006_add_reading_genre.sql  0007_create_term_relations.sql  0008_update_seed_terms.sql  0009_split_terms_tables.sql  0010_drop_japanese.sql  0011_create_sauces.sql
src/: error.rs  lib.rs  main.rs
src/db/: dishes.rs  ingredients.rs  mod.rs  recipes.rs  relations.rs  sauces.rs  techniques.rs  terms.rs  utensils.rs
src/models/: dish.rs  ingredient.rs  mod.rs  recipe.rs  relation.rs  sauce.rs  technique.rs  term.rs  utensil.rs
src/routes/: dishes.rs  ingredients.rs  mod.rs  recipes.rs  sauces.rs  techniques.rs  terms.rs  utensils.rs
static/: index.html
tests/: dishes_api.rs  ingredients_api.rs  recipes_api.rs  sauces_api.rs  techniques_api.rs  terms_api.rs  utensils_api.rs
